# bazel_java17_spring_demo

./: .gitignore  READ.ME  README  WORKSPACE  bazel-bazel_java17_spring_demo  bazel-bin  bazel-out  bazel-testlogs
bazelapp/: BUILD.bazel
bazelapp/src/main/java/com/sberston/: SampleMain.java  main.java
bazelapp/src/test/java/com/sberston/: test.java
bazelmodule/: BUILD.bazel
bazelmodule/src/main/java/com/sberston/: BazelModule.java  HelloWorld.java
src/main/: main.java
src/main/java/com/sberston/: main.java
