java_binary (
    name = "BazelApp",
    srcs = glob(["src/main/java/com/sberston/*.java"]),
    main_class = "com.sberston.BazelApp",
    deps = ["//bazelmodule:BazelModule",
            "@maven//:org_springframework_spring_core",
            "@maven//:org_springframework_boot_spring_boot"
            ]
)
