#load("//springboot:springboot.bzl", "springboot")

lib_deps = [
    "//bazelmodule:BazelModule",
]

springboot_deps = [
    "@maven//:org_springframework_boot_spring_boot",
    "@maven//:org_springframework_boot_spring_boot_autoconfigure",
    "@maven//:org_springframework_boot_spring_boot_starter_web",
]

java_library (
    name = "BazelApp",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = lib_deps + springboot_deps,
)
